Fixes bug where bottom few pixels are cut off in feed topic title

--- a/assets/css/blog/feed.css
+++ b/assets/css/blog/feed.css
@@ -53,6 +53,8 @@
     text-overflow: ellipsis;
     letter-spacing: 0;
     white-space: nowrap;
+    /* Reference: https://stackoverflow.com/questions/7760193/bottom-few-pixels-of-text-cut-off */
+    line-height: normal;
 }
 
 .feed-right {
